--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_TARGET=
-BUILD_ARGS:CC=clang LD=ld.lld
+ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
+ANYKERNEL_SOURCE_BRANCH=master
+KERNEL_SOURCE=https://github.com/thrdchld/kernel_asus_sdm660
+KERNEL_SOURCE_BRANCH=X01BD-EAS-PIE
+KERNEL_TARGET=X01BD
+BUILD_ARGS:CC=clang
