Update config.env, add ksu

--- a/config.env
+++ b/config.env
@@ -2,5 +2,5 @@ ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/thrdchld/kernel_asus_sdm660
 KERNEL_SOURCE_BRANCH=X01BD-EAS-PIE
-KERNEL_TARGET=X01BD
+KERNEL_TARGET=X01BD-ksu
 BUILD_ARGS:CC=clang
