--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
-ANYKERNEL_SOURCE_BRANCH=4.4-hmp
-KERNEL_SOURCE=https://github.com/thrdchld/kernel_asus_sdm660
-KERNEL_SOURCE_BRANCH=X01BD-HMP-PIE
-KERNEL_TARGET=X01BD-ksu
+ANYKERNEL_SOURCE_BRANCH=4.19-std
+KERNEL_SOURCE=https://github.com/thrdchld/kernel_asus_sdm660-4.19-ksu
+KERNEL_SOURCE_BRANCH=lineage-20.0
+KERNEL_TARGET=asus/X01BD-ksu_defconfig
 BUILD_ARGS:CC=clang
