--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=4.19-std
-KERNEL_SOURCE=https://github.com/thrdchld/kernel_asus_sdm660-4.19-ksu
-KERNEL_SOURCE_BRANCH=backup-20231115/lineage-20.0
-KERNEL_TARGET=asus/X01BD-ksu
+KERNEL_SOURCE=https://github.com/karthik1896/android_kernel_asus_sdm660-4.19
+KERNEL_SOURCE_BRANCH=r2/s
+KERNEL_TARGET=asus/X01BD
 BUILD_ARGS:CC=clang
