--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=4.4-hmp
-KERNEL_SOURCE=https://github.com/thrdchld/kernel_asus_sdm660
-KERNEL_SOURCE_BRANCH=X01BD-HMP-PIE
-KERNEL_TARGET=X01BD-ksu
+KERNEL_SOURCE=https://github.com/thrdchld/kernel_asus_X01BD
+KERNEL_SOURCE_BRANCH=testing
+KERNEL_TARGET=Aghisna
 BUILD_ARGS:CC=clang
