--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
-ANYKERNEL_SOURCE_BRANCH=4.4-hmp
+ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3
+ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/thrdchld/android_kernel_asus_sdm660
 KERNEL_SOURCE_BRANCH=Elixir13
 KERNEL_TARGET=X01BD
