--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Package kernel
         run: |
-          apt install curl -y
+          sudo apt install curl -y
           curl bashupload.com -T out/arch/arm64/boot/Image.gz-dtb
           git clone --depth=1 ${{ env.ANYKERNEL_SOURCE }} -b ${{ env.ANYKERNEL_SOURCE_BRANCH }} AnyKernel3 && rm -rf AnyKernel3/.git AnyKernel3/.github AnyKernel3/LICENSE AnyKernel3/README.md
           if [[ -f out/arch/arm64/boot/Image.gz-dtb ]]; then
