--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3
-ANYKERNEL_SOURCE_BRANCH=master
+ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
+ANYKERNEL_SOURCE_BRANCH=4.4-hmp
 KERNEL_SOURCE=https://github.com/thrdchld/android_kernel_asus_sdm660
-KERNEL_SOURCE_BRANCH=Elixir13
+KERNEL_SOURCE_BRANCH=E-KSU
 KERNEL_TARGET=X01BD
 BUILD_ARGS:CC=clang
