--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
-ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/thrdchld/kernel_asus_sdm660
-KERNEL_SOURCE_BRANCH=X01BD-EAS-PIE
-KERNEL_TARGET=X01BD-ksu
+ANYKERNEL_SOURCE_BRANCH=4.19-std
+KERNEL_SOURCE=https://github.com/thrdchld/android_kernel_asus_sdm660-4.19
+KERNEL_SOURCE_BRANCH=thirteen
+KERNEL_TARGET=X01BD
 BUILD_ARGS:CC=clang
