--- a/config.env
+++ b/config.env
@@ -2,5 +2,5 @@ ANYKERNEL_SOURCE=https://github.com/thrdchld/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=4.19-std
 KERNEL_SOURCE=https://github.com/thrdchld/android_kernel_asus_sdm660-4.19
 KERNEL_SOURCE_BRANCH=thirteen
-KERNEL_TARGET=X01BD
+KERNEL_TARGET=vendor/X01BD
 BUILD_ARGS:CC=clang
